progress text no longer wraps inside container

--- a/css/custom.css
+++ b/css/custom.css
@@ -20,6 +20,9 @@
   text-align: left;
   padding-left: 8px;
   color: white;
+  font-size: 1rem;
+  color: black;
+  white-space: nowrap;
 }
 
 .pbar {
